# trec-covid-rag

./: .gitignore  HyDE.py  LLM_as_validator.py  README.md  dense_retrieval.py  evaluation.py  main.py  pipeline.py  pyproject.toml  result.txt  test.py  utils.py
HyDE/: HyDE.py
LLM_as_validator/: LLM_as_validator.py
dense_retrieval/: dense_retrieval.py  results.tsv
dense_retriveal/: pipeline.py
