[project]
name = "trec-covid-challeng-RAG"
version = "0.0.1"
requires-python = "==3.11.*"
description = "create a RAG system to look into the TREC-COVID collection using Dense Retrieval, HyDE paradigm adnd LLMs as validator"
authors = [
  { name="Davide Ermellino", email="ermellinodavide@gmail.com" }
]

dependencies = [
  "numpy",
  "matplotlib",
  "seaborn",
  "transformers",
  "torch",
  "pandas",
  "tqdm",
  "llama-index",
  "llama-index-llms-ollama",
  "ruff",
]
